# rag-fastapi

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.chroma/: chroma.sqlite3
app/: container.py  main.py  version.py
app/api/: deps.py
app/api/v1/: health.py
app/core/: config.py  logging.py
domain/entities/: document.py
domain/repositories/: document_repository.py
domain/services/: chunk_source.py  chunker.py  text_extractor.py  vector_store.py
infrastructure/chunk_sources/: filesystem_jsonl.py
infrastructure/chunking/: simple_chunker.py
infrastructure/pdf/: pypdf_text_extractor.py
infrastructure/storage/: local_document_repository.py
infrastructure/vectorstores/: chroma.py  in_memory.py
interface_adapters/controllers/: document_controller.py
interface_adapters/dto/: document_dto.py
interface_adapters/web/api/v1/: documents.py  health.py  rag.py
tests/: conftest.py  test_documents.py  test_e2e_rag_flow.py  test_health.py  test_index_document_chunks.py  test_rag_query.py  test_vectorstore_chroma.py
use_cases/: get_document.py  index_document_chunks.py  ingest_document.py  list_documents.py  query_rag.py
